# pyrite

./: .travis.yml  setup.cfg
pyrite/: __init__.py
pyrite/tests/: __init__.py
