[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pyrite
description = manipulate, create, and parse DS9/CIAO regions
long_description = This is a package for regions and shapes that relies on astropy
author = Joseph Booker
author_email = joe@neoturbine.net
license = BSD
url = http://example.org
edit_on_github = True
github_project = sargas/pyrite
